--- a/index2.html
+++ b/index2.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My second web page!</title>
+    </head>
+    <body>
+        <h1>My first heading!</h1>
+        <p>Hello, World!</p>
+        <a href="http://www.mths.ca>">School Website</a>
+    </body>
+</html>
